簡単なプロパティの設定と取得のテストを記述
細かいところ修正

--- a/src/core/visual/rina/Makefile
+++ b/src/core/visual/rina/Makefile
@@ -20,7 +20,8 @@ CPPFILES=\
 	test/rinaTextDrawDeviceNode.cpp \
 	test/rinaTextPin.cpp          \
 	test/rinaTextProperty.cpp     \
-	test/rinaTextProviderNode.cpp 
+	test/rinaTextProviderNode.cpp \
+	test/rinaTest.cpp
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
