コンパイルが通るように

--- a/src/core/visual/rina/Makefile
+++ b/src/core/visual/rina/Makefile
@@ -16,6 +16,7 @@ CPPFILES=\
 	rinaProperty.cpp              \
 	rinaPin.cpp                   \
 	rinaIdRegistry.cpp            \
+	rinaQueue.cpp                 \
 	test/rina1DPositionProperty.cpp \
 	test/rinaTextDrawDeviceNode.cpp \
 	test/rinaTextPin.cpp          \
