text mixer の実験的実装が動くように

--- a/src/core/visual/rina/Makefile
+++ b/src/core/visual/rina/Makefile
@@ -22,6 +22,7 @@ CPPFILES=\
 	test/rinaTextPin.cpp          \
 	test/rinaTextProperty.cpp     \
 	test/rinaTextProviderNode.cpp \
+	test/rinaTextMixerNode.cpp    \
 	test/rinaTest.cpp
 
 #-----------------------------------------
