RINAのテスト用プログラムを tests/core/rina に移動

--- a/tests/core/rina/Makefile
+++ b/tests/core/rina/Makefile
@@ -1,7 +1,7 @@
 #-----------------------------------------
 # トップディレクトリを相対ディレクトリで指すようにここは修正
 #-----------------------------------------
-CORE_DIR=../..
+CORE_DIR=../../../src/core
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
@@ -12,10 +12,13 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES=\
-	rinaNode.cpp                  \
-	rinaPin.cpp                   \
-	rinaIdRegistry.cpp            \
-	rinaQueue.cpp                 
+	rinaWideTextDrawDeviceNode.cpp \
+	rinaWideTextPin.cpp          \
+	rinaWideTextProviderNode.cpp \
+	rinaMultiTextPin.cpp          \
+	rinaMultiTextProviderNode.cpp \
+	rinaWideTextMixerNode.cpp    \
+	rinaTest.cpp
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
