--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -6,6 +6,7 @@ include $(TOP_DIR)/Makefile_filenames
 
 SUBSYS_DIRS=\
 	$(CORE_DIR)/base/config        \
+	$(ADDITONAL_SUBSYS_DIRS)       \
 	$(CORE_DIR)/visual/rina        \
 	$(CORE_DIR)/visual/window      \
 	$(CORE_DIR)/sound              \
@@ -24,7 +25,7 @@ SUBSYS_DIRS=\
 # makefile のあるサブディレクトリの定義
 # (順番に注意)
 
-SUB_DIRS=\
+SUB_DIRS+=\
 	$(CORE_DIR)/risse              \
 	$(SUBSYS_DIRS)                 \
 	$(CORE_DIR)/main
