ナローテキストを提供するノードなどのテストを追加
細かいバグを修正

--- a/tests/core/rina/Makefile
+++ b/tests/core/rina/Makefile
@@ -20,6 +20,7 @@ CPPFILES=\
 	rinaMultiTextPin.cpp           \
 	rinaMultiTextProviderNode.cpp  \
 	rinaWideTextMixerNode.cpp      \
+	rinaNarrowTextToWideTextConverterNode.cpp \
 	rinaTest.cpp
 
 #-----------------------------------------
