--- a/Makefile_filenames
+++ b/Makefile_filenames
@@ -21,6 +21,7 @@ LIBOGG_DIR=$(EXTERNAL_DIR)/libogg
 LIBVORBIS_DIR=$(EXTERNAL_DIR)/libvorbis
 OPENAL_DIR=$(EXTERNAL_DIR)/openal
 GC_DIR=$(EXTERNAL_DIR)/gc
+HAMIGAKI_DIR=$(EXTERNAL_DIR)/hamigaki
 
 
 ###### ビルド出力先
