テキストを左右反転させるreverserを追加
どうもノードのtraverseに問題があるようで正常に動作しないのであとで修正しなければ

--- a/tests/core/rina/Makefile
+++ b/tests/core/rina/Makefile
@@ -20,6 +20,7 @@ CPPFILES=\
 	rinaNarrowTextProviderNode.cpp \
 	rinaMultiTextProviderNode.cpp  \
 	rinaWideTextMixerNode.cpp      \
+	rinaWideTextReverserNode.cpp   \
 	rinaNarrowTextToWideTextConverterNode.cpp \
 	rinaTest.cpp
 
