--- a/src/core/visual/rina/Makefile
+++ b/src/core/visual/rina/Makefile
@@ -12,6 +12,7 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES=\
+	rinaGraph.cpp                 \
 	rinaUpdateRegion.cpp          \
 	rinaNode.cpp                  \
 	rinaPin.cpp                   \
