Dictionary クラスを実装、アイテムの簡単な読み込みと書き込みができるように

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -70,6 +70,7 @@ CPPFILES =  \
 			src/risseCoroutineClass.cpp              \
 			src/risseDateClass.cpp                   \
 			src/risseDateParser.cpp                  \
+			src/risseDictionaryClass.cpp             \
 			src/risseExceptionClass.cpp              \
 			src/risseFunctionClass.cpp               \
 			src/risseGC.cpp                          \
