ImageBuffer クラスを仮実装 (というか全然実装してないが)
いまのところ RisaGL の pixel_store を使うように。

--- a/Makefile_filenames
+++ b/Makefile_filenames
@@ -22,6 +22,7 @@ LIBVORBIS_DIR=$(EXTERNAL_DIR)/libvorbis
 OPENAL_DIR=$(EXTERNAL_DIR)/openal
 GC_DIR=$(EXTERNAL_DIR)/gc
 HAMIGAKI_DIR=$(EXTERNAL_DIR)/hamigaki
+RISAGL_DIR=$(EXTERNAL_DIR)/risagl
 
 
 ###### ビルド出力先
