--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -6,6 +6,7 @@ include $(TOP_DIR)/Makefile_filenames
 
 SUBSYS_DIRS=\
 	$(CORE_DIR)/base/config        \
+	$(CORE_DIR)/visual/image       \
 	$(CORE_DIR)/visual/rina        \
 	$(ADDITONAL_SUBSYS_DIRS)       \
 	$(CORE_DIR)/visual/window      \
@@ -32,7 +33,7 @@ SUB_DIRS+=\
 
 
 # このバイナリが依存しているライブラリ
-DEP_LIBS=BOOST BOOST_THREAD ZLIB WX LIBOGG LIBVORBIS OPENAL COMMON GC
+DEP_LIBS=BOOST BOOST_THREAD ZLIB WX LIBOGG LIBVORBIS OPENAL COMMON GC RISAGL
 
 # 追加の CFLAGS
 CXXFLAGS += -DBOOST_ENABLE_ASSERT_HANDLER
