Null クラスを仮実装

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -81,6 +81,7 @@ CPPFILES =  \
 			src/risseModule.cpp                      \
 			src/risseModuleClass.cpp                 \
 			src/risseNativeBinder.cpp                \
+			src/risseNullClass.cpp                   \
 			src/risseNumberClass.cpp                 \
 			src/risseObject.cpp                      \
 			src/risseObjectBase.cpp                  \
