Octet クラスを仮実装

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -87,6 +87,7 @@ CPPFILES =  \
 			src/risseObjectBase.cpp                  \
 			src/risseObjectClass.cpp                 \
 			src/risseOctet.cpp                       \
+			src/risseOctetClass.cpp                  \
 			src/risseOpCodes.cpp                     \
 			src/risseOperateFlags.cpp                \
 			src/risseOperateRetValue.cpp             \
