ディレクトリ名 risagl から risa_gl へ
RisaGL のリポジトリがkikyou.info内に移ったので外部リポジトリのパスを変更

--- a/external/Makefile
+++ b/external/Makefile
@@ -3,7 +3,7 @@ include $(TOP_DIR)/Makefile_filenames
 
 # サブディレクトリの定義
 
-SUBLIBS= gc boost zlib libpng libjpeg expat wxWidgets libtomcrypt freetype libogg libvorbis openal hamigaki risagl
+SUBLIBS= gc boost zlib libpng libjpeg expat wxWidgets libtomcrypt freetype libogg libvorbis openal hamigaki risa_gl
 
 
 # デフォルトターゲット
