--- a/Makefile_filenames
+++ b/Makefile_filenames
@@ -22,7 +22,7 @@ LIBVORBIS_DIR=$(EXTERNAL_DIR)/libvorbis
 OPENAL_DIR=$(EXTERNAL_DIR)/openal
 GC_DIR=$(EXTERNAL_DIR)/gc
 HAMIGAKI_DIR=$(EXTERNAL_DIR)/hamigaki
-RISAGL_DIR=$(EXTERNAL_DIR)/risagl
+RISAGL_DIR=$(EXTERNAL_DIR)/risa_gl
 
 
 ###### ビルド出力先
