--- a/src/core/visual/image/Makefile
+++ b/src/core/visual/image/Makefile
@@ -12,6 +12,7 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES=\
+	Image.cpp                          \
 	ImageBuffer.cpp                    
 
 #-----------------------------------------
