画像読み込み部分の基本的なコードを記述
ピクセルに関する操作を tPixel として PixelType.cpp に抜き出した

静的にすべてが決定できるならばテンプレートによるバインディングはよても効率的で有効だが、プラグイン指向にすると動的なパラメータからテンプレートライブラリへの変換経路がどうしても必要になる………

--- a/src/core/visual/image/Makefile
+++ b/src/core/visual/image/Makefile
@@ -13,7 +13,9 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 #-----------------------------------------
 CPPFILES=\
 	Image.cpp                          \
-	ImageBuffer.cpp                    
+	ImageBuffer.cpp                    \
+	ImageCodec.cpp                     \
+	PixelType.cpp                      
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
