BMPデコーダを追加(動作は未チェック)

--- a/src/core/visual/image/Makefile
+++ b/src/core/visual/image/Makefile
@@ -15,7 +15,8 @@ CPPFILES=\
 	Image.cpp                          \
 	ImageBuffer.cpp                    \
 	ImageCodec.cpp                     \
-	PixelType.cpp                      
+	PixelType.cpp                      \
+	codec/BMP.cpp                      
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
