BMP.h はいいとして PNG.h とかだと libpng の png.h と被ったりするので XXXCodec というソースファイル名を使うことにした

--- a/src/core/visual/image/Makefile
+++ b/src/core/visual/image/Makefile
@@ -16,7 +16,7 @@ CPPFILES=\
 	ImageBuffer.cpp                    \
 	ImageCodec.cpp                     \
 	PixelType.cpp                      \
-	codec/BMP.cpp                      
+	codec/BMPCodec.cpp                 
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
