PNG デコーダを追加(未テスト)

--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -33,7 +33,7 @@ SUB_DIRS+=\
 
 
 # このバイナリが依存しているライブラリ
-DEP_LIBS=BOOST BOOST_THREAD ZLIB WX LIBOGG LIBVORBIS OPENAL COMMON GC RISAGL
+DEP_LIBS=BOOST BOOST_THREAD ZLIB WX LIBOGG LIBVORBIS OPENAL COMMON GC RISAGL LIBJPEG LIBPNG
 
 # 追加の CFLAGS
 CXXFLAGS += -DBOOST_ENABLE_ASSERT_HANDLER
