PNGのメタデータを文字列として取得するように (メタデータは文字列で格納されるのが基本なので文字列に統一)

--- a/src/core/visual/image/Makefile
+++ b/src/core/visual/image/Makefile
@@ -17,7 +17,8 @@ CPPFILES=\
 	ImageCodec.cpp                     \
 	PixelType.cpp                      \
 	codec/BMPCodec.cpp                 \
-	codec/PNGCodec.cpp                 
+	codec/PNGCodec.cpp                 \
+	codec/JPEGCodec.cpp                
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
