TLG5/TLG6 コーデックを追加。ただしまだ未テストのC言語汎用版TLG5デコーダのみ実装。

--- a/src/core/visual/image/Makefile
+++ b/src/core/visual/image/Makefile
@@ -18,7 +18,8 @@ CPPFILES=\
 	PixelType.cpp                      \
 	codec/BMPCodec.cpp                 \
 	codec/PNGCodec.cpp                 \
-	codec/JPEGCodec.cpp                
+	codec/JPEGCodec.cpp                \
+	codec/TLGCodec.cpp                 
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
