tlg5 デコーダの一部実装に YASM アセンブラを使うように。
どうもやっぱりC言語版では超えられない壁がある。

x86_64 どうしよっかなぁ

--- a/Makefile_common
+++ b/Makefile_common
@@ -51,6 +51,11 @@ ifdef PRESERVE_ASM
 	$(CXX) -c -masm=intel $(DEFAULT_CXXFLAGS) $(CXXFLAGS) $(INCLUDES) $< -S -o $(@:.o=.s)
 endif
 
+## yasmソース→オブジェクトファイル
+
+%.o: %.yas
+	$(YASM) $(YASM_FLAGS) $< -o $@
+
 
 ## コンパイル済みヘッダ
 %.h.gch: %.h
