TLGエンコーダを追加 (メタデータ保存部分はまだ。テストもまだ。)

--- a/src/core/visual/image/Makefile
+++ b/src/core/visual/image/Makefile
@@ -19,7 +19,8 @@ CPPFILES=\
 	codec/BMPCodec.cpp                 \
 	codec/PNGCodec.cpp                 \
 	codec/JPEGCodec.cpp                \
-	codec/TLGDecoder.cpp               
+	codec/TLGDecoder.cpp               \
+	codec/TLGEncoder.cpp               
 
 ifdef USE_YASM
  ASMFILES = \
