吉里吉里２用の PhaseVocoder アセンブリ出力が機能するように
でもgcc 3.4.5 の出力でほぼ問題ないだろうから、とりあえずはgcc4.1の出力への置き換えはしないかな

--- a/src/tools/bcc_vocoder/default/Makefile
+++ b/src/tools/bcc_vocoder/default/Makefile
@@ -3,13 +3,14 @@ all_target: all_cpp prepare binary
 
 PRESERVE_ASM=1
 DEBUG=no
+CXXFLAGS=-DRISA_RINGBUFFER_NO_GC
 
 CORE_DIR=../../../core
 include $(CORE_DIR)/Makefile_core_common
 
 
 all_cpp:
-	cat \
+	cat ../empty.cpp \
 		$(CORE_DIR)/sound/opt_default/WaveFormatConverter_Default.cpp \
 		$(CORE_DIR)/sound/filter/phasevocoder/opt_default/PhaseVocoderDSP_Default.cpp \
 		$(CORE_DIR)/base/mathlib/opt_default/RealFFT_Default.cpp \
