* reinterpret_cast の誤用を修正  * gcc-4.1.2 にしてからコンパイルが通らなかったところを修正  * こちらで使用している gettext-devel が変わったので .po ファイルが変わった

--- a/src/tools/krkrrel/Makefile
+++ b/src/tools/krkrrel/Makefile
@@ -17,7 +17,7 @@ LDFLAGS = -g $(CONSOLE_LDFLAGS)
 
 #----------------------------#
 
-INCLUDES = -I.
+INCLUDES =
 
 CPPFILES =  ConsoleMain.cpp \
 			FileList.cpp  \
