boost の assertion failure を Risse の AssertionError 例外として補足するように

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -41,7 +41,8 @@ document:
 CXXFLAGS += \
 	-DRISSE_NO_REGEXP \
 	-DRISSE_SUPPORT_WX \
-	-DRISSE_SUPPORT_THREADS
+	-DRISSE_SUPPORT_THREADS \
+	-DBOOST_ENABLE_ASSERT_HANDLER
 
 ifeq ($(COROUTINE_LIBRARY),boost)
 endif
