global をパッケージごとにもてるようにしたので、いままでの組み込みクラスなどはすべて "risse" パッケージに移した。
暫定的に、スクリプトをevaluateするときは"main"パッケージに入っていることにする。"risse" パッケージは暗黙的に import * in risse; っぽくインポートされるので特に意識をする必要はない。

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -92,6 +92,7 @@ CPPFILES =  \
 			src/risseOpCodes.cpp                     \
 			src/risseOperateFlags.cpp                \
 			src/risseOperateRetValue.cpp             \
+			src/rissePackage.cpp                     \
 			src/rissePrimitiveClass.cpp              \
 			src/rissePropertyClass.cpp               \
 			src/risseRealClass.cpp                   \
