* src/builtin/risseBuiltinPackageInitializer.h は Risa の方でも使いそうなので微妙に改修  * prec.h を include ディレクトリにコピーしないように

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -259,7 +259,7 @@ BIN_DEPS += $(Risse_BIN_OUTPUT_DIR)/risse-config
 #----------------------------#
 
 # ヘッダファイルを集めてコピーする
-RISSE_HEADER_FILES := $(shell sh -c "cd src; find . -name '*.h'") $(shell sh -c "cd src; find . -name '*.inc'")
+RISSE_HEADER_FILES := $(filter-out ./prec.h,$(shell sh -c "cd src; find . -name '*.h'") $(shell sh -c "cd src; find . -name '*.inc'"))
 RISSE_HEADER_DESTS := $(subst ./,include/,$(RISSE_HEADER_FILES))
 
 include/% :: src/%
