--- a/src/core/risa/packages/risa/stdio/Makefile
+++ b/src/core/risa/packages/risa/stdio/Makefile
@@ -1,7 +1,7 @@
 #-----------------------------------------
 # トップディレクトリを相対ディレクトリで指すようにここは修正
 #-----------------------------------------
-CORE_DIR=../..
+CORE_DIR=../../../..
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
@@ -12,7 +12,6 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES=\
-	SystemClass.cpp              \
 	StandardIO.cpp               
 
 #-----------------------------------------
