--- a/src/core/risa/packages/risa/event/Makefile
+++ b/src/core/risa/packages/risa/event/Makefile
@@ -1,7 +1,7 @@
 #-----------------------------------------
 # トップディレクトリを相対ディレクトリで指すようにここは修正
 #-----------------------------------------
-CORE_DIR=../..
+CORE_DIR=../../../..
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
@@ -15,7 +15,7 @@ CPPFILES=\
 	TickCount.cpp                  \
 	Event.cpp                      \
 	IdleEvent.cpp                  \
-	Timer.cpp                      
+	timer/Timer.cpp                
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
