Window を risa.widget パッケージに

--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -6,13 +6,13 @@ include $(TOP_DIR)/Makefile_filenames
 
 SUBSYS_DIRS=\
 	$(CORE_DIR)/base/config                       \
+	$(CORE_DIR)/risa/packages/risa/widget         \
 	$(CORE_DIR)/risa/packages/risa/event          \
 	$(CORE_DIR)/risa/packages/risa/fs             \
 	$(CORE_DIR)/risa/packages/risa/log            \
 	$(CORE_DIR)/risa/packages/risa/graphic/image  \
 	$(CORE_DIR)/risa/packages/risa/stdio          \
 	$(ADDITONAL_SUBSYS_DIRS)                      \
-	$(CORE_DIR)/visual/window                     \
 	$(CORE_DIR)/sound                             \
 	$(CORE_DIR)/base/cpu                          \
 	$(CORE_DIR)/base/exception                    \
