rina をコンパイルが通るように
これからレンダラの実装に入るつもり。

パッケージの機構を実装したらなんかやるつもりだったけれども何をやろうとしていたのか忘れた。なんだったけな……。思い出したらそっちを先にやる。

--- a/src/core/Makefile_core_common
+++ b/src/core/Makefile_core_common
@@ -6,6 +6,7 @@ include $(TOP_DIR)/Makefile_filenames
 
 SUBSYS_DIRS=\
 	$(CORE_DIR)/risa/common                       \
+	$(CORE_DIR)/risa/packages/risa/graphic/rina   \
 	$(CORE_DIR)/risa/packages/risa/sound          \
 	$(CORE_DIR)/risa/packages/risa/widget         \
 	$(CORE_DIR)/risa/packages/risa/event          \
