Data クラスを追加。軽量バインディング用の基底クラス。
簡単なピクセルをモデルにした Data クラスのサブクラス Pixel をテスト用に作成してテスト中


プロパティを mcConst で指定するとプロパティへの書き込みすらできないので治さなければ

--- a/src/core/risse/Makefile
+++ b/src/core/risse/Makefile
@@ -67,6 +67,7 @@ CPPFILES =  \
 			src/risseCodeBlock.cpp                             \
 			src/risseCodeExecutor.cpp                          \
 			src/risseConfig.cpp                                \
+			src/risseDataClass.cpp                             \
 			src/risseDictionaryClass.cpp                       \
 			src/risseExceptionClass.cpp                        \
 			src/risseFunctionClass.cpp                         \
