ラスタイメージ用のエッジ (ノードとノードをつなぐもの、つまりピンとかピン間をながれるデータとか) を仮実装

--- a/src/core/risa/packages/risa/graphic/rina/Makefile
+++ b/src/core/risa/packages/risa/graphic/rina/Makefile
@@ -17,7 +17,8 @@ CPPFILES=\
 	rinaNode.cpp                  \
 	rinaPin.cpp                   \
 	rinaIdRegistry.cpp            \
-	rinaQueue.cpp                 
+	rinaQueue.cpp                 \
+	rinaImageEdge.cpp             
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
