--- a/src/core/risa/packages/risa/widget/Makefile
+++ b/src/core/risa/packages/risa/widget/Makefile
@@ -12,7 +12,7 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES=\
-	Window.cpp                    
+	Frame.cpp                     
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
