--- a/src/core/risa/packages/risa/widget/Makefile
+++ b/src/core/risa/packages/risa/widget/Makefile
@@ -12,7 +12,8 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 # このディレクトリにあるソースファイルを列挙
 #-----------------------------------------
 CPPFILES=\
-	Frame.cpp                     
+	Frame.cpp                    \
+	Rina.cpp                      
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
