--- a/src/core/risa/packages/risa/widget/Makefile
+++ b/src/core/risa/packages/risa/widget/Makefile
@@ -13,7 +13,8 @@ include $(CORE_DIR)/Makefile_core_subsys_pre
 #-----------------------------------------
 CPPFILES=\
 	Frame.cpp                    \
-	Rina.cpp                      
+	Rina.cpp                     \
+	Window.cpp
 
 #-----------------------------------------
 # ここのセクションは通常変更する必要なし
