--- a/Makefile_common
+++ b/Makefile_common
@@ -167,11 +167,11 @@ ifeq (unix,$(PLATFORM))
  $(BIN) : $(BIN_DEPS) $(PREC_H_NAME).gch $(OBJS) $(MESSAGE_OBJECTS)
 	if [ ! -d $(dir $(BIN)) ]; then mkdir -p $(dir $(BIN)) ; fi
 	$(CXX) $(LDFLAGS) $(OBJS) -o $(BIN)-bin $(LIBS) $(DEFAULT_LIBS)
-	echo -e '#!/bin/sh\n\
-bindir=`dirname $$0`\n\
-export $(LD_LIBRARY_PATH_ENV_NAME)=$$bindir:$$$(LD_LIBRARY_PATH_ENV_NAME)\n\
-exec $$bindir/$(notdir $(BIN))-bin $$@' > $(BIN)
-	chmod a+x $(BIN)
+	@echo '#!/bin/sh -e' > $(BIN)
+	@echo 'bindir=`dirname $$0`' >> $(BIN)
+	@echo '$(LD_LIBRARY_PATH_ENV_NAME)=$$bindir:$$$(LD_LIBRARY_PATH_ENV_NAME)' >> $(BIN)
+	@echo 'exec $$bindir/$(notdir $(BIN))-bin $$@' >> $(BIN)
+	@chmod a+x $(BIN)
 
 
 else	# $(PLATFORM) != unix
