Linux x86_64 で Risse とか Risa がコンパイルできるように
とりあえず Risse のコルーチン関連、まだ動きません
とりあえず Risa のサウンド関連、たぶん OpenAL の設定の問題だと思うんですけど、音が鳴りません。

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -9,7 +9,7 @@ target: subdirs
 
 subdirs:
 	@(set -e; \
-	pwd=$$(PWD); \
+	pwd=`pwd`; \
 	for dir in $(SUB_DIRS); do \
 		cd $$dir; \
 		$(MAKE) || (echo "To compile only the failed directory:"; \
